--- a/.gitmodules
+++ b/.gitmodules
@@ -12,3 +12,6 @@
 [submodule "2025-08-10/src/yak-shaving-map"]
 	path = 2025-08-10/src/yak-shaving-map
 	url = https://github.com/antfu/yak-shaving-map
+[submodule "2025-09-18/src/yak-shaving-map"]
+	path = 2025-09-18/src/yak-shaving-map
+	url = https://github.com/antfu/yak-shaving-map
