--- a/2022-10-16/src/package.json
+++ b/2022-10-16/src/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "slidev",
-    "build": "slidev build --base /2022/patterns-vueuse/ --out ../../dist/2022/patterns-vueuse",
+    "build": "tsx ../../scripts/build.ts /2022/patterns-vueuse/",
     "export": "slidev export --output ../2022-10-16-vue-fes-japan-en.pdf"
   }
 }
