--- a/2023-05-25/src/package.json
+++ b/2023-05-25/src/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "slidev",
-    "build": "slidev build --base /2023/nuxt-devtools-strasbourg/ --out ../../dist/2023/nuxt-devtools-strasbourg",
+    "build": "tsx ../../scripts/build.ts /2023/nuxt-devtools-strasbourg/",
     "export": "slidev export --per-slide --output ../2023-05-25-nuxt-devtools-strasbourg-en.pdf"
   }
 }
