--- a/2021-04-29/src/package.json
+++ b/2021-04-29/src/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "slidev",
-    "build": "slidev build --base /2021/composable-vue/ --out ../../dist/2021/composable-vue",
+    "build": "tsx ../../scripts/build.ts /2021/composable-vue/",
     "export": "slidev export --output ../2021-04-29-vueday-en.pdf"
   }
 }
