--- a/2021-05-22/src/package.json
+++ b/2021-05-22/src/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "dev": "slidev",
-    "build": "slidev build --base /2021/vueconf-china/ --out ../../dist/2021/vueconf-china",
+    "build": "tsx ../../scripts/build.ts /2021/vueconf-china/",
     "export": "slidev export --dark --output ../2021-05-22-vueconf-china.pdf"
   }
 }
