--- a/2021-10-17/src/package.json
+++ b/2021-10-17/src/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "dev": "slidev",
-    "build": "slidev build --base /2021/laravel-vue-taiwan/ --out ../../dist/2021/laravel-vue-taiwan",
+    "build": "tsx ../../scripts/build.ts /2021/laravel-vue-taiwan/",
     "export": "slidev export --dark --output ../2021-10-17-laravel-vue-taiwan.pdf"
   }
 }
