--- a/2022-10-11/src/package.json
+++ b/2022-10-11/src/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "slidev",
-    "build": "slidev build --base /2022/vite-on-demand-dx/ --out ../../dist/2022/vite-on-demand-dx",
+    "build": "tsx ../../scripts/build.ts /2022/vite-on-demand-dx/",
     "export": "slidev export --output ../2022-10-11-vite-on-demand-dx.pdf"
   }
 }
