--- a/2022-12-10/src/package.json
+++ b/2022-12-10/src/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "slidev",
-    "build": "slidev build --base /2022/vueuse-best-practice/ --out ../../dist/2022/vueuse-best-practice",
+    "build": "tsx ../../scripts/build.ts /2022/vueuse-best-practice/",
     "export": "slidev export --output ../2022-12-10-vueconf-china.pdf --dark"
   }
 }
