--- a/2023-02-09/src/package.json
+++ b/2023-02-09/src/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "slidev",
-    "build": "slidev build --base /2023/nuxt-devtools/ --out ../../dist/2023/nuxt-devtools",
+    "build": "tsx ../../scripts/build.ts /2023/nuxt-devtools/",
     "export": "slidev export --per-slide --output ../2023-02-09-nuxt-devtools-en.pdf",
     "play": "slidev --remote --tunnel"
   }
