--- a/2023-10-28/src/package.json
+++ b/2023-10-28/src/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "slidev",
-    "build": "slidev build --base /2023/vuefesjapan/ --out ../../dist/2023/vuefesjapan",
+    "build": "tsx ../../scripts/build.ts /2023/vuefesjapan/",
     "export": "slidev export --per-slide --output ../2023-10-28-vue-fes-japan-en.pdf"
   }
 }
