--- a/2024-02-29/src/package.json
+++ b/2024-02-29/src/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "slidev",
-    "build": "slidev build --base /2024/vue-amsterdam/ --out ../../dist/2024/vue-amsterdam",
+    "build": "tsx ../../scripts/build.ts /2024/vue-amsterdam/",
     "export": "slidev export --per-slide --output ../2024-02-29-vue-amsterdam-en.pdf"
   }
 }
