--- a/2024-06-14/src/package.json
+++ b/2024-06-14/src/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "slidev",
-    "build": "slidev build --base /2024/react-summit/ --out ../../dist/2024/react-summit",
+    "build": "tsx ../../scripts/build.ts /2024/react-summit/",
     "export": "slidev export --dark --per-slide --output ../2024-06-14-react-summit-en.pdf"
   }
 }
