--- a/2024-07-06/src/package.json
+++ b/2024-07-06/src/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "slidev",
-    "build": "slidev build --base /2024/vueconf-shenzhen/ --out ../../dist/2024/vueconf-shenzhen",
+    "build": "tsx ../../scripts/build.ts /2024/vueconf-shenzhen/",
     "export": "slidev export --per-slide --output ../2024-07-06-vueconf-shenzhen-zh.pdf"
   },
   "devDependencies": {
