--- a/2024-10-03/src/package.json
+++ b/2024-10-03/src/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "slidev",
-    "build": "slidev build --base /2024/viteconf/ --out ../../dist/2024/viteconf",
+    "build": "tsx ../../scripts/build.ts /2024/viteconf/",
     "export": "slidev export --per-slide --output ../2024-10-03-viteconf-en.pdf"
   }
 }
