--- a/2024-10-19/src/package.json
+++ b/2024-10-19/src/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "slidev",
-    "build": "slidev build --base /2024/vue-fes-japan/ --out ../../dist/2024/vue-fes-japan",
+    "build": "tsx ../../scripts/build.ts /2024/vue-fes-japan/",
     "export": "slidev export --per-slide --output ../2024-10-19-vue-fes-japan-en.pdf"
   }
 }
