--- a/2025-09-18/src/package.json
+++ b/2025-09-18/src/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "slidev",
-    "build": "slidev build --base /2025/squiggleconf/ --out ../../dist/2025/squiggleconf",
+    "build": "tsx ../../scripts/build.ts /2025/squiggleconf/",
     "export": "slidev export --per-slide --output ../2025-09-18-squiggleconf-en.pdf"
   }
 }
