--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -6,8 +6,8 @@ catalog:
   '@eslint/config-inspector': ^1.3.0
   '@iconify/collections': ^1.0.602
   '@iconify/json': ^2.2.392
-  '@slidev/cli': ^52.2.5
-  '@slidev/client': ^52.2.5
+  '@slidev/cli': 52.1.0
+  '@slidev/client': 52.1.0
   '@slidev/theme-default': ^0.25.0
   '@types/node': ^24.7.0
   '@types/prompts': ^2.4.9
