--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -6,8 +6,8 @@ catalog:
   '@eslint/config-inspector': ^1.3.0
   '@iconify/collections': ^1.0.607
   '@iconify/json': ^2.2.397
-  '@slidev/cli': 52.1.0
-  '@slidev/client': 52.1.0
+  '@slidev/cli': ^52.3.0
+  '@slidev/client': ^52.3.0
   '@slidev/theme-default': ^0.25.0
   '@types/node': ^24.8.1
   '@types/prompts': ^2.4.9
